--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,15 +11,18 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
-    <!-- Google Play filtering --> 
+    <!-- Google Play filtering -->
     <uses-feature android:name="android.hardware.wifi.direct" android:required="true"/>
 
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
+        android:largeHeap="true"
+        android:windowSoftInputMode="adjustPan" >
         android:theme="@android:style/Theme.Holo">
         <activity
             android:name=".WiFiDirectActivity"
+            android:windowSoftInputMode="adjustPan"
             android:label="@string/app_name" android:launchMode="singleTask">
             <intent-filter>
                 <action
